[package]

name = "eventual"
version = "0.0.1"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "Future & Stream abstraction"
documentation = "https://carllerche.github.io/eventual/eventual"
homepage      = "https://github.com/carllerche/eventual"
repository    = "https://github.com/carllerche/eventual"
readme        = "README.md"
keywords      = ["async", "threading", "future", "stream"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
log = "0.3.0"

[dependencies.syncbox]
git = "https://github.com/carllerche/syncbox"

[dev-dependencies]
time = "0.1.22"
env_logger = "0.3.0"

[[test]]

name = "test"
path = "test/test.rs"
